SECRET FIX PROSPOSED BY GITGUARDIAN

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-# SOME ENVIRONMENT VARIABLES
-GITHUB_TOKEN=---FILL-ME---
-OPENAI_API_KEY=---FILL-ME---
+#Environment Variables
+GITHUB_TOKEN=-----FILL-ME-----
+OPENAI_API_KEY=-----FILL-ME-----
+GLPAT=-----FILL-ME-----
+
